@@ -4,6 +4,7 @@ SimpleTest 6.x-2.4, xxxx-xx-xx (development version)
 - Backports:
    * #305077: Rework simpletest backend.
    * #308399: The simpletest error handler is broken for PHP functions.
+   * #308262: Clean-up and documentation of simpletest.js.
 
 SimpleTest 6.x-2.3, 2008-09-15
 ------------------------------
